# ai-test-cpp

./: CMakeLists.txt  LICENSE.txt
src/: main.cpp
src/app/: app.cpp  app.hpp  config.hpp  configs.hpp  global.cpp  global.hpp  resources.hpp
src/controllers/: ambient-controller.cpp  ambient-controller.hpp  collision-controller.cpp  collision-controller.hpp  mob-controller.cpp  mob-controller.hpp
src/core/entity/: entity.cpp  entity.hpp
src/core/entity/mobs/: mobs.hpp
src/core/entity/mobs/bunny/: bunny.cpp  bunny.hpp
src/core/entity/mobs/wolf/: wolf.cpp  wolf.hpp
src/core/object/: object.cpp  object.hpp
src/core/object/objects/: objects.hpp
src/core/object/objects/bush/: bush.cpp  bush.hpp
src/core/object/objects/tree/: tree.cpp  tree.hpp
src/system/: global.cpp  global.hpp  resources.hpp  subsystems.cpp  subsystems.hpp  system.cpp  system.hpp
src/system/graphics/: image-handler.cpp  image-handler.hpp  window.cpp  window.hpp
src/utils/game/entity/: animation.cpp  animation.hpp  behavior-handler.cpp  behavior-handler.hpp
src/utils/math/: math.hpp  vec2.hpp
